demos/postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  namespace: default
  labels:
    pod: postgres
spec:
  containers:
  - name: postgres-container
    image: postgres:latest
    ports:
      - containerPort: 5432
    volumeMounts:
      - mountPath: /var/lib/postgresql/data
        name: db-data
  volumes:
    - name: db-data
      emptyDir: {}

# this should be changed to a stateful set, perhaps?
