demos/postgres-statefulset.yml
# apiVersion: v1
# kind: StatefulSet
# metadata:
#   name: postgres-statefulset
#   namespace: default
#   labels:
#     set: postgres
# spec:
#   containers:
#   - name: postgres-container
#     image: postgres:latest
#     ports:
#       - containerPort: 5432
#     env:
#       - name: POSTGRES_PASSWORD
#         value: password
#       - name: POSTGRES_USER
#         value: username
#       - name: POSTGRES_DB
#         value: default_database
#       - name: PGDATA
#         value: /var/lib/postgresql/data/pgdata
#     volumeMounts:
#       - mountPath: /var/lib/postgresql/data
#         name: db-data
#   volumes:
#     - name: db-data
#       emptyDir: {}

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  selector:
    matchLabels:
      app: postgres # has to match .spec.template.metadata.labels
  serviceName: "nginx"
  replicas: 3 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: postgres # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres-db
        image: postgres:latest
        ports:
        - containerPort: 5432
    volumeMounts:
      - mountPath: /var/lib/postgresql/data
        name: db-data
  volumes:
    - name: db-data
      emptyDir: {}
