demos/sports-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "sports-deployment"
  namespace: "default"
  labels:
    deployment: "sports-deployment"
spec:
  replicas: 3
  # # minReadySeconds: 5
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: "sports-spod"
  template:
    metadata:
      labels:
        pod: "sports-pod"
    spec:
      # terminationGracePeriodSeconds: 30
      containers:
      - name: "sports-app"
        image: "esuminski/sports:k8sdb"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /logs
            name: logs

      volumes:
        - name: logs
          # emptyDir: {}
