demos/greeter-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: sports-loadbalancer
spec:
  type: LoadBalancer 
  selector:
    pod: "greeter-pod"
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8080
